fix filter list appointments

--- a/appointments/index.html
+++ b/appointments/index.html
@@ -6,6 +6,7 @@
 	<title>Appoint</title>
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff">
+
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/main.css">
     </script>
@@ -399,32 +400,32 @@
 										<path d="M1 5 L6 10.28571 V10 1 M6 10.28571 L11 5" stroke-linecap="round" stroke-linejoin="round"></path>
 									</svg>
 								</div>
-								<ul class="table__filter-list drop-list">
-									<li class="drop-list__item table__filter-item ">
-										<label class="filter-item">All
-											<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
-											<span class="filter-item__checkmark"></span>
-										</label>	 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Service call
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label> 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Recall
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label>
-									</li>
-									<li class="table__filter-item">
-										<button class="table__filter-btn-apply">
-											Filter
-										</button>
-									</li>
-								</ul>
-
+								<div class="table__filter-list drop-list">
+									<ul class="table__filter-items">
+										<li class="drop-list__item table__filter-item ">
+											<label class="filter-item">All
+												<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
+												<span class="filter-item__checkmark"></span>
+											</label>	 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Service call
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label> 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Recall
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label>
+										</li>
+									</ul>
+									<button class="table__filter-btn-apply">
+										Filter
+									</button>
+								</div>
+							</div>
 						</th>
 						<th>
 							<div class="table__cell table__cell_headline">
@@ -446,31 +447,31 @@
 										<path d="M1 5 L6 10.28571 V10 1 M6 10.28571 L11 5" stroke-linecap="round" stroke-linejoin="round"></path>
 									</svg>
 								</div>
-								<ul class="table__filter-list drop-list">
-									<li class="drop-list__item table__filter-item ">
-										<label class="filter-item">All
-											<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
-											<span class="filter-item__checkmark"></span>
-										</label>	 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Service call
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label> 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Recall
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label>
-									</li>
-									<li class="table__filter-item">
-										<button class="table__filter-btn-apply">
-											Filter
-										</button>
-									</li>
-								</ul>
+								<div class="table__filter-list drop-list">
+									<ul class="table__filter-items">
+										<li class="drop-list__item table__filter-item ">
+											<label class="filter-item">All
+												<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
+												<span class="filter-item__checkmark"></span>
+											</label>	 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Service call
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label> 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Recall
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label>
+										</li>
+									</ul>
+									<button class="table__filter-btn-apply">
+										Filter
+									</button>
+								</div>
 							</div>
 						</th>
 						<th>
@@ -493,31 +494,31 @@
 										<path d="M1 5 L6 10.28571 V10 1 M6 10.28571 L11 5" stroke-linecap="round" stroke-linejoin="round"></path>
 									</svg>
 								</div>
-								<ul class="table__filter-list drop-list">
-									<li class="drop-list__item table__filter-item ">
-										<label class="filter-item">All
-											<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
-											<span class="filter-item__checkmark"></span>
-										</label>	 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Service call
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label> 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Recall
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label>
-									</li>
-									<li class="table__filter-item">
-										<button class="table__filter-btn-apply">
-											Filter
-										</button>
-									</li>
-								</ul>
+								<div class="table__filter-list drop-list">
+									<ul class="table__filter-items">
+										<li class="drop-list__item table__filter-item ">
+											<label class="filter-item">All
+												<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
+												<span class="filter-item__checkmark"></span>
+											</label>	 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Service call
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label> 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Recall
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label>
+										</li>
+									</ul>
+									<button class="table__filter-btn-apply">
+										Filter
+									</button>
+								</div>
 							</div>
 						</th>
 						<th>
@@ -540,31 +541,31 @@
 										<path d="M1 5 L6 10.28571 V10 1 M6 10.28571 L11 5" stroke-linecap="round" stroke-linejoin="round"></path>
 									</svg>
 								</div>
-								<ul class="table__filter-list drop-list">
-									<li class="drop-list__item table__filter-item ">
-										<label class="filter-item">All
-											<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
-											<span class="filter-item__checkmark"></span>
-										</label>	 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Service call
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label> 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Recall
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label>
-									</li>
-									<li class="table__filter-item">
-										<button class="table__filter-btn-apply">
-											Filter
-										</button>
-									</li>
-								</ul>
+								<div class="table__filter-list drop-list">
+									<ul class="table__filter-items">
+										<li class="drop-list__item table__filter-item ">
+											<label class="filter-item">All
+												<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
+												<span class="filter-item__checkmark"></span>
+											</label>	 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Service call
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label> 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Recall
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label>
+										</li>
+									</ul>
+									<button class="table__filter-btn-apply">
+										Filter
+									</button>
+								</div>
 							</div>
 						</th>
 						<th>
@@ -587,31 +588,31 @@
 										<path d="M1 5 L6 10.28571 V10 1 M6 10.28571 L11 5" stroke-linecap="round" stroke-linejoin="round"></path>
 									</svg>			
 								</div>
-								<ul class="table__filter-list drop-list">
-									<li class="drop-list__item table__filter-item ">
-										<label class="filter-item">All
-											<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
-											<span class="filter-item__checkmark"></span>
-										</label>	 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Service call
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label> 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Recall
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label>
-									</li>
-									<li class="table__filter-item">
-										<button class="table__filter-btn-apply">
-											Filter
-										</button>
-									</li>
-								</ul>
+								<div class="table__filter-list drop-list">
+									<ul class="table__filter-items">
+										<li class="drop-list__item table__filter-item ">
+											<label class="filter-item">All
+												<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
+												<span class="filter-item__checkmark"></span>
+											</label>	 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Service call
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label> 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Recall
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label>
+										</li>
+									</ul>
+									<button class="table__filter-btn-apply">
+										Filter
+									</button>
+								</div>
 							</div>
 						</th>
 						<th>
@@ -646,31 +647,31 @@
 										<path d="M1 5 L6 10.28571 V10 1 M6 10.28571 L11 5" stroke-linecap="round" stroke-linejoin="round"></path>
 									</svg>
 								</div>
-								<ul class="table__filter-list drop-list">
-									<li class="drop-list__item table__filter-item ">
-										<label for="" class="filter-item">All
-											<input  class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
-											<span class="filter-item__checkmark"></span>
-										</label>	 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Service call
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label> 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Recall
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label>
-									</li>
-									<li class="table__filter-item">
-										<button class="table__filter-btn-apply">
-											Filter
-										</button>
-									</li>
-								</ul>
+								<div class="table__filter-list drop-list">
+									<ul class="table__filter-items">
+										<li class="drop-list__item table__filter-item ">
+											<label class="filter-item">All
+												<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
+												<span class="filter-item__checkmark"></span>
+											</label>	 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Service call
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label> 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Recall
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label>
+										</li>
+									</ul>
+									<button class="table__filter-btn-apply">
+										Filter
+									</button>
+								</div>
 							</div>
 						</th>
 						<th>
