fix filter list jobs

--- a/jobs/index.html
+++ b/jobs/index.html
@@ -308,7 +308,7 @@
 						<li class="drop-list__item sort-list__item">Area</li>
 						<li class="drop-list__item sort-list__item">Source</li>
 						<li class="drop-list__item sort-list__item">Created by</li>
-						<li class="drop-list__item sort-list__item">Appointemnts</li>
+						<li class="drop-list__item sort-list__item">Appointments</li>
 						<li class="drop-list__item sort-list__item">Service Resource</li>
 						<li class="drop-list__item sort-list__item">Total</li>
 						<li class="drop-list__item sort-list__item">Paid</li>
@@ -386,31 +386,31 @@
 										<path d="M1 5 L6 10.28571 V10 1 M6 10.28571 L11 5" stroke-linecap="round" stroke-linejoin="round"></path>
 									</svg>
 								</div>
-								<ul class="table__filter-list drop-list">
-									<li class="drop-list__item table__filter-item ">
-										<label class="filter-item">All
-											<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
-											<span class="filter-item__checkmark"></span>
-										</label>	 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Service call
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label> 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Recall
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label>
-									</li>
-									<li class="table__filter-item">
-										<button class="table__filter-btn-apply">
-											Filter
-										</button>
-									</li>
-								</ul>
+								<div class="table__filter-list drop-list">
+									<ul class="table__filter-items">
+										<li class="drop-list__item table__filter-item ">
+											<label class="filter-item">All
+												<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
+												<span class="filter-item__checkmark"></span>
+											</label>	 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Service call
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label> 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Recall
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label>
+										</li>
+									</ul>
+									<button class="table__filter-btn-apply">
+										Filter
+									</button>
+								</div>
 							</div>
 						</th>
 						<th>
@@ -433,31 +433,31 @@
 										<path d="M1 5 L6 10.28571 V10 1 M6 10.28571 L11 5" stroke-linecap="round" stroke-linejoin="round"></path>
 									</svg>
 								</div>
-								<ul class="table__filter-list drop-list">
-									<li class="drop-list__item table__filter-item ">
-										<label class="filter-item">All
-											<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
-											<span class="filter-item__checkmark"></span>
-										</label>	 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Service call
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label> 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Recall
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label>
-									</li>
-									<li class="table__filter-item">
-										<button class="table__filter-btn-apply">
-											Filter
-										</button>
-									</li>
-								</ul>
+								<div class="table__filter-list drop-list">
+									<ul class="table__filter-items">
+										<li class="drop-list__item table__filter-item ">
+											<label class="filter-item">All
+												<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
+												<span class="filter-item__checkmark"></span>
+											</label>	 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Service call
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label> 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Recall
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label>
+										</li>
+									</ul>
+									<button class="table__filter-btn-apply">
+										Filter
+									</button>
+								</div>
 							</div>
 						</th>
 						<th>
@@ -480,31 +480,31 @@
 										<path d="M1 5 L6 10.28571 V10 1 M6 10.28571 L11 5" stroke-linecap="round" stroke-linejoin="round"></path>
 									</svg>
 								</div>
-								<ul class="table__filter-list drop-list">
-									<li class="drop-list__item table__filter-item ">
-										<label class="filter-item">All
-											<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
-											<span class="filter-item__checkmark"></span>
-										</label>	 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Service call
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label> 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Recall
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label>
-									</li>
-									<li class="table__filter-item">
-										<button class="table__filter-btn-apply">
-											Filter
-										</button>
-									</li>
-								</ul>
+								<div class="table__filter-list drop-list">
+									<ul class="table__filter-items">
+										<li class="drop-list__item table__filter-item ">
+											<label class="filter-item">All
+												<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
+												<span class="filter-item__checkmark"></span>
+											</label>	 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Service call
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label> 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Recall
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label>
+										</li>
+									</ul>
+									<button class="table__filter-btn-apply">
+										Filter
+									</button>
+								</div>
 							</div>
 						</th>
 						<th>
@@ -527,31 +527,31 @@
 										<path d="M1 5 L6 10.28571 V10 1 M6 10.28571 L11 5" stroke-linecap="round" stroke-linejoin="round"></path>
 									</svg>
 								</div>
-								<ul class="table__filter-list drop-list">
-									<li class="drop-list__item table__filter-item ">
-										<label class="filter-item">All
-											<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
-											<span class="filter-item__checkmark"></span>
-										</label>	 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Service call
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label> 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Recall
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label>
-									</li>
-									<li class="table__filter-item">
-										<button class="table__filter-btn-apply">
-											Filter
-										</button>
-									</li>
-								</ul>
+								<div class="table__filter-list drop-list">
+									<ul class="table__filter-items">
+										<li class="drop-list__item table__filter-item ">
+											<label class="filter-item">All
+												<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
+												<span class="filter-item__checkmark"></span>
+											</label>	 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Service call
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label> 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Recall
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label>
+										</li>
+									</ul>
+									<button class="table__filter-btn-apply">
+										Filter
+									</button>
+								</div>
 							</div>
 						</th>
 						<th>
@@ -574,37 +574,37 @@
 										<path d="M1 5 L6 10.28571 V10 1 M6 10.28571 L11 5" stroke-linecap="round" stroke-linejoin="round"></path>
 									</svg>			
 								</div>
-								<ul class="table__filter-list drop-list">
-									<li class="drop-list__item table__filter-item ">
-										<label class="filter-item">All
-											<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
-											<span class="filter-item__checkmark"></span>
-										</label>	 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Service call
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label> 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Recall
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label>
-									</li>
-									<li class="table__filter-item">
-										<button class="table__filter-btn-apply">
-											Filter
-										</button>
-									</li>
-								</ul>
+								<div class="table__filter-list drop-list">
+									<ul class="table__filter-items">
+										<li class="drop-list__item table__filter-item ">
+											<label class="filter-item">All
+												<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
+												<span class="filter-item__checkmark"></span>
+											</label>	 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Service call
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label> 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Recall
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label>
+										</li>
+									</ul>
+									<button class="table__filter-btn-apply">
+										Filter
+									</button>
+								</div>
 							</div>
 						</th>
 						<th>
 							<div class="table__cell table__cell_headline">
 								<p class="table__text table__text_headline">
-									Appointemnts
+									Appointments
 								</p>
 								<div class="table__sort-btn">
 									<svg viewBox="0 0 12 11" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -633,31 +633,31 @@
 										<path d="M1 5 L6 10.28571 V10 1 M6 10.28571 L11 5" stroke-linecap="round" stroke-linejoin="round"></path>
 									</svg>
 								</div>
-								<ul class="table__filter-list drop-list">
-									<li class="drop-list__item table__filter-item ">
-										<label for="" class="filter-item">All
-											<input  class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
-											<span class="filter-item__checkmark"></span>
-										</label>	 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Service call
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label> 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Recall
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label>
-									</li>
-									<li class="table__filter-item">
-										<button class="table__filter-btn-apply">
-											Filter
-										</button>
-									</li>
-								</ul>
+								<div class="table__filter-list drop-list">
+									<ul class="table__filter-items">
+										<li class="drop-list__item table__filter-item ">
+											<label class="filter-item">All
+												<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
+												<span class="filter-item__checkmark"></span>
+											</label>	 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Service call
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label> 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Recall
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label>
+										</li>
+									</ul>
+									<button class="table__filter-btn-apply">
+										Filter
+									</button>
+								</div>
 							</div>
 						</th>
 						<th>
@@ -732,7 +732,7 @@
 								</p>
 							</div>
 							<p class="table-mobile__cell_appointments table-mobile__cell_appointments_title">
-								Appointemnts: <span class="table-mobile__cell_appointments-number">4</span>
+								Appointments: <span class="table-mobile__cell_appointments-number">4</span>
 							</p>
 						</div>
 						<div class="table-mobile__cell-description">
