fix filter list calls

--- a/calls/area.html
+++ b/calls/area.html
@@ -441,31 +441,69 @@
 								M0 4 L8 4 M0 7 L8 7" stroke-linecap="round" stroke-linejoin="round"></path>
 						</svg>
 					</div>	
-					<ul class="controls-mobile__tags-list controls__tags-list drop-list">
-						<li class="drop-list__item controls__tags-item-wrapper ">
-							<label class="controls-mobile__tags-item controls__tags-item">All
-								<input class="tags-item__checkbox tags-item__checkbox_all" type="checkbox" checked>
-								<span class="tags-item__checkmark"></span>
-							</label>	 
-						</li>
-						<li class="drop-list__item controls__tags-item-wrapper">
-							<label class="controls-mobile__tags-item controls__tags-item">Service call
-								<input class="tags-item__checkbox" type="checkbox">
-								<span class="tags-item__checkmark"></span>
-							</label> 
-						</li>
-						<li class="drop-list__item controls__tags-item-wrapper">
-							<label class="controls-mobile__tags-item controls__tags-item">Recall
-								<input class="tags-item__checkbox" type="checkbox">
-								<span class="tags-item__checkmark"></span>
-							</label>
-						</li>
-						<li class="controls__tags-apply">
+					<div class="controls-mobile__tags-list controls__tags-list drop-list">
+						<ul class="controls-mobile__tags-items">
+							<li class="drop-list__item controls__tags-item-wrapper ">
+								<label class="controls-mobile__tags-item controls__tags-item">All
+									<input class="tags-item__checkbox tags-item__checkbox_all" type="checkbox" checked>
+									<span class="tags-item__checkmark"></span>
+								</label>	 
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls-mobile__tags-item controls__tags-item">Service call
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label> 
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls-mobile__tags-item controls__tags-item">Recall
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label>
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls-mobile__tags-item controls__tags-item">Service call
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label> 
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls-mobile__tags-item controls__tags-item">Recall
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label>
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls-mobile__tags-item controls__tags-item">Service call
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label> 
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls-mobile__tags-item controls__tags-item">Recall
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label>
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls-mobile__tags-item controls__tags-item">Service call
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label> 
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls-mobile__tags-item controls__tags-item">Recall
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label>
+							</li>
+						</ul>
+						<div class="controls__tags-apply">
 							<button class="controls-mobile__tags-btn-apply controls__tags-btn-apply">
 								Apply
 							</button>
-						</li>
-					</ul>
+						</div>
+					</div>
 				</div>
 				<div class="controls-mobile__reload reload ">
 					<div class="controls__reload-btn">
