--- a/calls/index.html
+++ b/calls/index.html
@@ -441,31 +441,69 @@
 								M0 4 L8 4 M0 7 L8 7" stroke-linecap="round" stroke-linejoin="round"></path>
 						</svg>
 					</div>	
-					<ul class="controls-mobile__tags-list controls__tags-list drop-list">
-						<li class="drop-list__item controls__tags-item-wrapper ">
-							<label class="controls-mobile__tags-item controls__tags-item">All
-								<input class="tags-item__checkbox tags-item__checkbox_all" type="checkbox" checked>
-								<span class="tags-item__checkmark"></span>
-							</label>	 
-						</li>
-						<li class="drop-list__item controls__tags-item-wrapper">
-							<label class="controls-mobile__tags-item controls__tags-item">Service call
-								<input class="tags-item__checkbox" type="checkbox">
-								<span class="tags-item__checkmark"></span>
-							</label> 
-						</li>
-						<li class="drop-list__item controls__tags-item-wrapper">
-							<label class="controls-mobile__tags-item controls__tags-item">Recall
-								<input class="tags-item__checkbox" type="checkbox">
-								<span class="tags-item__checkmark"></span>
-							</label>
-						</li>
-						<li class="controls__tags-apply">
+					<div class="controls-mobile__tags-list controls__tags-list drop-list">
+						<ul class="controls-mobile__tags-items">
+							<li class="drop-list__item controls__tags-item-wrapper ">
+								<label class="controls-mobile__tags-item controls__tags-item">All
+									<input class="tags-item__checkbox tags-item__checkbox_all" type="checkbox" checked>
+									<span class="tags-item__checkmark"></span>
+								</label>	 
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls-mobile__tags-item controls__tags-item">Service call
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label> 
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls-mobile__tags-item controls__tags-item">Recall
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label>
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls-mobile__tags-item controls__tags-item">Service call
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label> 
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls-mobile__tags-item controls__tags-item">Recall
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label>
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls-mobile__tags-item controls__tags-item">Service call
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label> 
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls-mobile__tags-item controls__tags-item">Recall
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label>
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls-mobile__tags-item controls__tags-item">Service call
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label> 
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls-mobile__tags-item controls__tags-item">Recall
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label>
+							</li>
+						</ul>
+						<div class="controls__tags-apply">
 							<button class="controls-mobile__tags-btn-apply controls__tags-btn-apply">
 								Apply
 							</button>
-						</li>
-					</ul>
+						</div>
+					</div>
 				</div>
 				<div class="controls-mobile__reload reload ">
 					<div class="controls__reload-btn">
@@ -629,32 +667,32 @@
 										<path d="M1 5 L6 10.28571 V10 1 M6 10.28571 L11 5" stroke-linecap="round" stroke-linejoin="round"></path>
 									</svg>
 								</div>
-								<ul class="table__filter-list drop-list">
-									<li class="drop-list__item table__filter-item ">
-										<label class="filter-item">All
-											<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
-											<span class="filter-item__checkmark"></span>
-										</label>	 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Service call
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label> 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Recall
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label>
-									</li>
-									<li class="table__filter-item">
-										<button class="table__filter-btn-apply">
-											Filter
-										</button>
-									</li>
-								</ul>
-
+								<div class="table__filter-list drop-list">
+									<ul class="table__filter-items">
+										<li class="drop-list__item table__filter-item ">
+											<label class="filter-item">All
+												<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
+												<span class="filter-item__checkmark"></span>
+											</label>	 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Service call
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label> 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Recall
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label>
+										</li>
+									</ul>
+									<button class="table__filter-btn-apply">
+										Filter
+									</button>
+								</div>
+							</div>
 						</th>
 						<th>
 							<div class="table__cell table__cell_headline">
@@ -700,31 +738,31 @@
 										<path d="M1 5 L6 10.28571 V10 1 M6 10.28571 L11 5" stroke-linecap="round" stroke-linejoin="round"></path>
 									</svg>
 								</div>
-								<ul class="table__filter-list drop-list">
-									<li class="drop-list__item table__filter-item ">
-										<label class="filter-item">All
-											<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
-											<span class="filter-item__checkmark"></span>
-										</label>	 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Service call
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label> 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Recall
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label>
-									</li>
-									<li class="table__filter-item">
-										<button class="table__filter-btn-apply">
-											Filter
-										</button>
-									</li>
-								</ul>
+								<div class="table__filter-list drop-list">
+									<ul class="table__filter-items">
+										<li class="drop-list__item table__filter-item ">
+											<label class="filter-item">All
+												<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
+												<span class="filter-item__checkmark"></span>
+											</label>	 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Service call
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label> 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Recall
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label>
+										</li>
+									</ul>
+									<button class="table__filter-btn-apply">
+										Filter
+									</button>
+								</div>
 							</div>
 						</th>
 						<th>
@@ -756,7 +794,6 @@
 								<p class="table__text table__text_headline">
 									
 								</p>
-
 							</div>
 						</th>
 						<th>
@@ -779,31 +816,31 @@
 										<path d="M1 5 L6 10.28571 V10 1 M6 10.28571 L11 5" stroke-linecap="round" stroke-linejoin="round"></path>
 									</svg>
 								</div>
-								<ul class="table__filter-list drop-list">
-									<li class="drop-list__item table__filter-item ">
-										<label for="" class="filter-item">All
-											<input  class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
-											<span class="filter-item__checkmark"></span>
-										</label>	 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Service call
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label> 
-									</li>
-									<li class="drop-list__item table__filter-item">
-										<label class="filter-item">Recall
-											<input class="filter-item__checkbox" type="checkbox">
-											<span class="filter-item__checkmark"></span>
-										</label>
-									</li>
-									<li class="table__filter-item">
-										<button class="table__filter-btn-apply">
-											Filter
-										</button>
-									</li>
-								</ul>
+								<div class="table__filter-list drop-list">
+									<ul class="table__filter-items">
+										<li class="drop-list__item table__filter-item ">
+											<label class="filter-item">All
+												<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
+												<span class="filter-item__checkmark"></span>
+											</label>	 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Service call
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label> 
+										</li>
+										<li class="drop-list__item table__filter-item">
+											<label class="filter-item">Recall
+												<input class="filter-item__checkbox" type="checkbox">
+												<span class="filter-item__checkmark"></span>
+											</label>
+										</li>
+									</ul>
+									<button class="table__filter-btn-apply">
+										Filter
+									</button>
+								</div>
 							</div>
 						</th>
 						<th>
