--- a/calls/index.html
+++ b/calls/index.html
@@ -709,6 +709,18 @@
 						<th>
 							<div class="table__cell table__cell_headline">
 								<p class="table__text table__text_headline">
+									Client
+								</p>
+								<div class="table__sort-btn">
+									<svg viewBox="0 0 12 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M1 5 L6 10.28571 V10 1 M6 10.28571 L11 5" stroke-linecap="round" stroke-linejoin="round"></path>
+									</svg>
+								</div>
+							</div>
+						</th>
+						<th>
+							<div class="table__cell table__cell_headline">
+								<p class="table__text table__text_headline">
 									From
 								</p>
 								<div class="table__sort-btn">
@@ -880,6 +892,14 @@
 						<td class="table__cell table__cell_caller-name  table__cell_content">
 							<p class="table__text">HEINER BRITANI</p>
 						</td>
+						<td class="table__cell table__cell_client  table__cell_content">
+							<div class="table__cell_client-wrapper">
+								<svg viewBox="0 0 11 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M9.57265 1.7H8.97436V0.5H7.77778V1.7H2.99145V0.5H1.79487V1.7H1.19658C0.53547 1.7 0 2.237 0 2.9V11.3C0 11.963 0.53547 12.5 1.19658 12.5H9.57265C10.2338 12.5 10.7692 11.963 10.7692 11.3V2.9C10.7692 2.237 10.2338 1.7 9.57265 1.7ZM5.38462 3.5C6.37479 3.5 7.17949 4.307 7.17949 5.3C7.17949 6.296 6.37479 7.1 5.38462 7.1C4.39444 7.1 3.58974 6.296 3.58974 5.3C3.58974 4.307 4.39444 3.5 5.38462 3.5ZM8.97436 10.7H1.79487V10.1C1.79487 8.9 4.18804 8.24 5.38462 8.24C6.5812 8.24 8.97436 8.9 8.97436 10.1V10.7Z" fill="#8E8E93"></path>
+								</svg>
+								<p class="table__text">John Ryder </p>
+							</div>
+						</td>
 						<td class="table__cell table__cell_from table__cell_content">
 							<p class="table__text">+19087478626</p>
 						</td>
@@ -936,6 +956,14 @@
 						<td class="table__cell table__cell_caller-name  table__cell_content">
 							<p class="table__text">HEINER BRITANI</p>
 						</td>
+						<td class="table__cell table__cell_client  table__cell_content">
+							<div class="table__cell_client-wrapper">
+								<svg viewBox="0 0 11 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M9.57265 1.7H8.97436V0.5H7.77778V1.7H2.99145V0.5H1.79487V1.7H1.19658C0.53547 1.7 0 2.237 0 2.9V11.3C0 11.963 0.53547 12.5 1.19658 12.5H9.57265C10.2338 12.5 10.7692 11.963 10.7692 11.3V2.9C10.7692 2.237 10.2338 1.7 9.57265 1.7ZM5.38462 3.5C6.37479 3.5 7.17949 4.307 7.17949 5.3C7.17949 6.296 6.37479 7.1 5.38462 7.1C4.39444 7.1 3.58974 6.296 3.58974 5.3C3.58974 4.307 4.39444 3.5 5.38462 3.5ZM8.97436 10.7H1.79487V10.1C1.79487 8.9 4.18804 8.24 5.38462 8.24C6.5812 8.24 8.97436 8.9 8.97436 10.1V10.7Z" fill="#8E8E93"></path>
+								</svg>
+								<p class="table__text">John Ryder </p>
+							</div>
+						</td>
 						<td class="table__cell table__cell_from table__cell_content">
 							<p class="table__text">+19087478626</p>
 						</td>
@@ -991,6 +1019,14 @@
 						</td>
 						<td class="table__cell table__cell_caller-name  table__cell_content">
 							<p class="table__text">HEINER BRITANI</p>
+						</td>
+						<td class="table__cell table__cell_client  table__cell_content">
+							<div class="table__cell_client-wrapper">
+								<svg viewBox="0 0 11 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M9.57265 1.7H8.97436V0.5H7.77778V1.7H2.99145V0.5H1.79487V1.7H1.19658C0.53547 1.7 0 2.237 0 2.9V11.3C0 11.963 0.53547 12.5 1.19658 12.5H9.57265C10.2338 12.5 10.7692 11.963 10.7692 11.3V2.9C10.7692 2.237 10.2338 1.7 9.57265 1.7ZM5.38462 3.5C6.37479 3.5 7.17949 4.307 7.17949 5.3C7.17949 6.296 6.37479 7.1 5.38462 7.1C4.39444 7.1 3.58974 6.296 3.58974 5.3C3.58974 4.307 4.39444 3.5 5.38462 3.5ZM8.97436 10.7H1.79487V10.1C1.79487 8.9 4.18804 8.24 5.38462 8.24C6.5812 8.24 8.97436 8.9 8.97436 10.1V10.7Z" fill="#8E8E93"></path>
+								</svg>
+								<p class="table__text">John Ryder </p>
+							</div>
 						</td>
 						<td class="table__cell table__cell_from table__cell_content">
 							<p class="table__text">+19087478626</p>
@@ -1050,6 +1086,12 @@
 							<p class="table-mobile__cell_caller-name table-mobile__cell_caller-name_title">
 								HEINER BRITANI
 							</p>
+							<div class="table-mobile__cell_client-wrapper">
+								<svg viewBox="0 0 11 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M9.57265 1.7H8.97436V0.5H7.77778V1.7H2.99145V0.5H1.79487V1.7H1.19658C0.53547 1.7 0 2.237 0 2.9V11.3C0 11.963 0.53547 12.5 1.19658 12.5H9.57265C10.2338 12.5 10.7692 11.963 10.7692 11.3V2.9C10.7692 2.237 10.2338 1.7 9.57265 1.7ZM5.38462 3.5C6.37479 3.5 7.17949 4.307 7.17949 5.3C7.17949 6.296 6.37479 7.1 5.38462 7.1C4.39444 7.1 3.58974 6.296 3.58974 5.3C3.58974 4.307 4.39444 3.5 5.38462 3.5ZM8.97436 10.7H1.79487V10.1C1.79487 8.9 4.18804 8.24 5.38462 8.24C6.5812 8.24 8.97436 8.9 8.97436 10.1V10.7Z" fill="#8E8E93"></path>
+								</svg>
+								<p class="table__text">John Ryder </p>
+							</div>
 						</div>
 						<div class="table-mobile__cell-description">
 							<p class="table-mobile__cell_type table__cell_type_completed">
@@ -1125,6 +1167,12 @@
 							<p class="table-mobile__cell_caller-name table-mobile__cell_caller-name_title">
 								HEINER BRITANI
 							</p>
+							<div class="table-mobile__cell_client-wrapper">
+								<svg viewBox="0 0 11 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M9.57265 1.7H8.97436V0.5H7.77778V1.7H2.99145V0.5H1.79487V1.7H1.19658C0.53547 1.7 0 2.237 0 2.9V11.3C0 11.963 0.53547 12.5 1.19658 12.5H9.57265C10.2338 12.5 10.7692 11.963 10.7692 11.3V2.9C10.7692 2.237 10.2338 1.7 9.57265 1.7ZM5.38462 3.5C6.37479 3.5 7.17949 4.307 7.17949 5.3C7.17949 6.296 6.37479 7.1 5.38462 7.1C4.39444 7.1 3.58974 6.296 3.58974 5.3C3.58974 4.307 4.39444 3.5 5.38462 3.5ZM8.97436 10.7H1.79487V10.1C1.79487 8.9 4.18804 8.24 5.38462 8.24C6.5812 8.24 8.97436 8.9 8.97436 10.1V10.7Z" fill="#8E8E93"></path>
+								</svg>
+								<p class="table__text">John Ryder </p>
+							</div>
 						</div>
 						<div class="table-mobile__cell-description">
 							<p class="table-mobile__cell_type table__cell_type_uncompleted">
@@ -1140,7 +1188,7 @@
 									</svg>
 								</div>
 							</div>
-						</div>
+						</div>	
 					</div>
 					<div class="table-mobile__cell-row table-mobile__cell-row_end">
 						<div class="table-mobile__cell-fields">
