--- a/clients/index.html
+++ b/clients/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<title>Jobs</title>
+	<title>Clients</title>
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff">
 
@@ -330,7 +330,7 @@
 							<p class="table__text">Mary Gray</p>
 						</td>
 						<td class="table__cell table__cell_phone table__cell_content">
-							<p class="table__text">Done</p>
+							<p class="table__text">(832) 565-55-45</p>
 						</td>
 						<td class="table__cell table__cell_source table__cell_content">
 							<p class="table__text">Google Ads</p>
