--- a/calls/index.html
+++ b/calls/index.html
@@ -592,6 +592,7 @@
 						<li class="drop-list__item sort-list__item selected">Date</li>
 						<li class="drop-list__item sort-list__item">Dispatcher</li>
 						<li class="drop-list__item sort-list__item">Caller Name</li>
+						<li class="drop-list__item sort-list__item">Client</li>
 						<li class="drop-list__item sort-list__item">From </li>
 						<li class="drop-list__item sort-list__item">Friendly Name</li>
 						<li class="drop-list__item sort-list__item">To</li>
