--- a/absences/index.html
+++ b/absences/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<title>Appoint</title>
+	<title>Absences</title>
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff">
 
@@ -522,14 +522,6 @@
 					<div class="table-mobile__cell-row">
 						<div class="table-mobile__cell-title">
 							<div class="table-mobile__cell-fields">
-								<div class="table-mobile__cell_area table-mobile__cell-field">
-									<p class="table-mobile__cell_area-label table-mobile__cell-field-label">
-										Area:
-									</p>
-									<p class="table-mobile__cell_area-content table-mobile__cell-field-content">
-										JAX_FL
-									</p>
-								</div>
 								<div class="table-mobile__cell_service-resource table-mobile__cell-field">
 									<p class="table-mobile__cell_service-resource-label table-mobile__cell-field-label">
 										Service Resource:
@@ -538,14 +530,22 @@
 										Andriy
 									</p>
 								</div>
+								<div class="table-mobile__cell_area table-mobile__cell-field">
+									<p class="table-mobile__cell_area-label table-mobile__cell-field-label">
+										Area:
+									</p>
+									<p class="table-mobile__cell_area-content table-mobile__cell-field-content">
+										JAX_FL
+									</p>
+								</div>
 							</div>
 						</div>
 						<div class="table-mobile__cell-description">
 							<p class="table-mobile__cell_absence-start">
-								Absence Start - <span class="table-mobile__cell_absence-start-time"> 06/26/2019 9:00 am</span>
+								Start: <span class="table-mobile__cell_absence-start-time"> 06/26/2019 9:00 am</span>
 							</p>
 							<p class="table-mobile__cell_absence-end">
-								Absence End - <span class="table-mobile__cell_absence-end-time"> 06/29/2019 6:00 pm </span>
+								End: <span class="table-mobile__cell_absence-end-time"> 06/29/2019 6:00 pm </span>
 							</p>
 						</div>
 					</div>
