--- a/invoices/index.html
+++ b/invoices/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<title>Invocies</title>
+	<title>Invoices</title>
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff">
 
@@ -20,7 +20,7 @@
 						200
 					</p>
 					<p class="dashboard__item-title">
-						All Invocies
+						All Invoices
 					</p>
 				</div>
 			</div>
