--- a/invoices/index.html
+++ b/invoices/index.html
@@ -50,7 +50,7 @@
 						$1,2K
 					</p>
 					<p class="dashboard__item-title">
-						Unpaid Amountx
+						Unpaid Amount
 					</p>
 				</div>
 			</div>
